# Embedded-DualElevator-System

./: CMakeLists.txt  Embedded-DualElevator-System.pdsprj  Embedded-DualElevator-System.pdsprj.DESKTOP-4BGTKGH.Muhammad Khaled.workspace  PROJECT_COMPLIANCE_REPORT.md  README.md  finalemb (1).pdsprj  finalemb (1).pdsprj.DESKTOP-4BGTKGH.Muhammad Khaled.workspace  finalemb.pdsprj  finalemb.pdsprj.DESKTOP-4BGTKGH.Muhammad Khaled.workspace
Adc/: Adc.c  Adc.h  Adc_Private.h
Critical/: critical.h
Dispatcher/: dispatcher.c  dispatcher.h
Elevator/: elevator.c  elevator.h
Exti/: Exti.c  Exti.h
Gpio/: Gpio.c  Gpio.h  Gpio_Private.h
LCD/: lcd.c  lcd.h
Lib/: Bit_Math.h  Std_Types.h  Utils.h
Master/: main.c
Nvic/: Nvic.c  Nvic.h
Project Backups/: finalemb (1) [20260510, 22-40-59].pdsprj  finalemb (1) [Autosaved].pdsprj  finalemb [20260509, 14-06-53].pdsprj  finalemb [20260509, 14-06-54].pdsprj  finalemb [20260509, 14-26-12].pdsprj  finalemb [20260509, 15-26-36].pdsprj  finalemb [20260511, 00-13-16].pdsprj  finalemb [20260511, 00-13-17].pdsprj  finalemb [Autosaved].pdsprj
Pwm/: Pwm.c  Pwm.h
Rcc/: Rcc.c  Rcc.h
Slave/: main.c
Spi/: Spi.c  Spi.h
SpiIpc/: spi_ipc.c  spi_ipc.h
Timer/: Timer.c  Timer.h  Timer_Private.h
Usart/: Usart.c  Usart.h
cmake/: ArmToolchain.cmake  IncludeList.cmake  SourceList.cmake
src/: main.c  syscalls.c
